Added the search and fixing some part

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
           <a href="#" class="buttons"><span class="iconic play_alt pla"></span>SIGN IN</a>
       </footer>
     </div>
+
+        <div class="search span-12">
+            <input type="text" placeholder="search" />
+              <a href="#" class="InputIcon"><span class='iconic magnifying_glass'></span></a>
+    </div>
 </div>
 </body>
 </html>
